--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "path-to-regexp": "^8.2.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "resend": "^6.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
