--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "passport-google-oauth20": "^2.0.0",
     "path-to-regexp": "^8.2.0",
     "pg": "^8.16.3",
-    "resend": "^6.1.0"
+    "resend": "^6.1.0",
+    "stripe": "^19.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
